zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__open_file_with_line_floating_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\",\nnew_tab_event).replace(&format!(\"{:?}\", temp_folder.path()), \"\\\"CWD\\\"\")"
---
Some(
    SpawnTerminal(
        Some(
            OpenFile(
                OpenFilePayload {
                    path: "/path/to/my/file.rs",
                    line_number: Some(
                        42,
                    ),
                    cwd: Some(
                        "CWD",
                    ),
                    originating_plugin: Some(
                        OriginatingPlugin {
                            plugin_id: 0,
                            client_id: 1,
                            context: {},
                        },
                    ),
                },
            ),
        ),
        Some(
            "Editing: /path/to/my/file.rs",
        ),
        Floating(
            None,
        ),
        false,
        ClientId(
            1,
        ),
        Some(
            NotificationEnd {
                channel: None,
                exit_status: None,
                unblock_condition: None,
                affected_pane_id: None,
                affected_tab_id: None,
                error_message: None,
                stdout_message: None,
            },
        ),
        false,
        None,
    ),
)
