zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__open_terminal_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", new_tab_event)"
---
Some(
    SpawnTerminal(
        Some(
            RunCommand(
                RunCommand {
                    command: ".",
                    args: [],
                    cwd: Some(
                        "/path/to/my/file.rs",
                    ),
                    hold_on_close: false,
                    hold_on_start: false,
                    originating_plugin: None,
                    use_terminal_title: true,
                },
            ),
        ),
        None,
        Tiled {
            direction: None,
            borderless: None,
            border_style: None,
        },
        false,
        ClientId(
            1,
        ),
        Some(
            NotificationEnd {
                channel: None,
                exit_status: None,
                unblock_condition: None,
                affected_pane_id: None,
                affected_tab_id: None,
                error_message: None,
                stdout_message: None,
            },
        ),
        false,
        None,
    ),
)
