zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__page_scroll_down_in_pane_id_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 7908
expression: "format!(\"{:#?}\", screen_instruction)"
---
Some(
    PageScrollDownInPaneId(
        Terminal(
            2,
        ),
    ),
)
